# CDEC-resolution

./: .gitattributes  .gitignore  CDEC_midterm_report.tex  README.md  pyproject.toml  run_eval.py  train.py  train_bert.py  train_hf.py  train_sft.py
data/: balanced_train_set.csv  dev_set.csv  event_pairs.dev  event_pairs.test  event_pairs.train  reason_deepseek_r1_all.csv  reason_deepseek_r1_dev.csv  reason_deepseek_r1_train.csv  test_set.csv  train_set.csv  unique_sample_9k_reason.csv
evaluation_results/: DeepSeek-R1-Distill-Qwen-1.5B-baseline.json  Qwen2.5-1.5B-Instruct-basline.json  Qwen2.5-1.5B-Instruct-reason-baseline.json  deepseek_r1.json  deepseek_r1_results.txt  evaluation_results_20250225_232920.json  evaluation_results_20250225_233049.json  evaluation_results_20250328_141059.json  evaluation_results_20250328_141321.json  sft_evaluation_results_20250225_232448.json  sft_evaluation_results_20250226_000336.json  sft_evaluation_results_20250226_001442.json  sft_evaluation_results_20250329_204000.json  sft_evaluation_results_20250329_225022.json  sft_evaluation_results_20250428_022030.json  sft_evaluation_results_20250428_221523.json  sft_evaluation_results_20250428_225033.json
notebooks/: data_analysis.ipynb  model_bert.ipynb
scripts/: README.md  eval_bert.py  eval_modernbert.py  eval_qwen_instruct.py  eval_qwen_reason.py  eval_reasoning_data.py  eval_reasoning_results.py  eval_sft.py  preprocess_data.py  reasoning_collector.py  run_eval.py  sample_train_data.py  train_modernbert.py  train_qwen_deepseek_distill_sft.py  train_qwen_instruct_sft.py  train_qwen_reason_grpo.py  train_qwen_reason_sft.py  train_sft.py  visualize_grpo_training.py
(+9 files in other folders)
