[tool.poetry]
name = "cdec-resolution"
version = "0.1.0"
description = ""
authors = ["Jingyuan <shijy2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
