[tool.poetry]
name = "cdec-resolution"
version = "0.1.0"
description = ""
authors = ["Jingyuan <shijy2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
transformers = "^4.48.2"
torch = {version = "^2.6.0", source = "torch"}


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
