[tool.poetry]
name = "cdec-resolution"
version = "0.1.0"
description = ""
authors = ["Jingyuan <shijy2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
transformers = "^4.48.2"
torch = {version = "2.5.1", source = "torch-cuda121"}
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
evaluate = "^0.4.3"
tensorboard = "^2.19.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"


[[tool.poetry.source]]
name = "torch-cuda121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
